# aerial_trajectory

bspline_generator/: CMakeLists.txt  package.xml
bspline_generator/include/bspline_generator/: AerialControllerInterface.h  AerialPlannar.h  BsplineGenerator.h  aerial_plannar.h  bsplineGenerator.h
bspline_generator/launch/: aerial_trajectory_plannar.launch
bspline_generator/src/: AerialControllerInterface.cpp  AerialPlannar.cpp  BsplineGenerator.cpp  aerialPlannar.cpp  aerial_plannar_node.cpp  bsplineGenerator.cpp  bspline_generator_node.cpp
